Small change to click script to stop already matched and current pairs from being clicked on. Also a small change to CSS for media screens as the animation was causing them to stay too big, this was fixed by making the height and width css !important for cards.

--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@
   width: 80vw;
   height: auto;
   padding: 10px;
+  margin: 0 auto;
   border: solid 3px purple;
 }
 
@@ -46,15 +47,16 @@
   flex-wrap: wrap;
   width: auto;
   max-width: 600px;
+  position: relative;
   justify-content: center;
   margin: 0 auto;
 }
 
 .card {
   background-color: pink;
-  position: relative;
   width: 100px;
   height: 150px;
+  margin: auto;
   border: solid black 2px;
   border-radius: 30px;
   margin: 10px;
@@ -135,7 +137,7 @@
 /* Smaller screens */
 @media screen and (max-width: 630px) {
   .card {
-    width: 80px;
-    height: 120px;
+    width: 80px !important;
+    height: 120px !important;
   }
 }
